--- a/custom_components/zyxel_gs1920/manifest.json
+++ b/custom_components/zyxel_gs1920/manifest.json
@@ -1,9 +1,10 @@
 {
   "domain": "zyxel_gs1920",
-  "name": "Zyxel GS1920",
-  "version": "1.3.0",
-  "requirements": ["pysnmp>=4.5.0"],
+  "name": "Zyxel GS1920 Switch",
+  "version": "1.3",
+  "requirements": ["pysnmp"],
+  "config_flow": true,
+  "documentation": "https://github.com/phsycho999/zyxel_gs1920",
   "dependencies": [],
-  "codeowners": ["@deinusername"],
-  "config_entries": ["zyxel_gs1920"]
+  "codeowners": ["@phsycho999"]
 }
