--- a/custom_components/zyxel_gs1920/manifest.json
+++ b/custom_components/zyxel_gs1920/manifest.json
@@ -1,13 +1,8 @@
 {
   "domain": "zyxel_gs1920",
-  "name": "Zyxel GS1920 Switch",
-  "version": "1.0.0",
-  "documentation": "",
-  "requirements": [
-    "pysnmp"
-  ],
+  "name": "Zyxel GS1920",
+  "version": "1.3.1",
+  "requirements": ["pysnmp"],
   "dependencies": [],
-  "codeowners": [],
-  "config_flow": true,
-  "iot_class": "local_polling"
+  "config_flow": true
 }
