--- a/custom_components/zyxel_gs1920/manifest.json
+++ b/custom_components/zyxel_gs1920/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "zyxel_gs1920",
-  "name": "Zyxel GS1920",
+  "name": "Zyxel GS1920 Switch",
   "version": "1.0.0",
   "documentation": "https://github.com/phsycho999/zyxel_gs1920",
-  "requirements": ["pysnmp"],
+  "requirements": ["pysnmp>=4.5.0"],
   "dependencies": [],
   "codeowners": ["@phsycho999"],
   "config_flow": true,
+  "iot_class": "local_polling",
   "integration_type": "hub"
 }
